docs: openapiにエンドポイント定義を追加する
